# mcp-playground

./: .gitignore
mcp-client-demo/: client.py  main.py  pyproject.toml
mcp-primitives-and-inputs/: prompt.py  pyproject.toml  resources.py
mcp-server-deepdive/: crypto.py  local.py  log.txt  notes.txt  other_inputs.py  pyproject.toml  screenshot.py  websearch.py
mcp-server-deepdive-deployment/: pyproject.toml
mcp-server-deepdive-deployment/src/mcp_server_deepdive_deployment.egg-info/: PKG-INFO  requires.txt
mcp-server-deepdive-deployment/src/mcpserver/: deployment.py
mcp-server-http-streamable/: pyproject.toml  server.py
my-first-mcp-server/: main.py  pyproject.toml  weather.py
