[project]
name = "mcp-server-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.13.1",
    "openai>=1.108.1",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pyscreen>=0.3",
    "requests>=2.32.5",
]
